spring-batch-metis-poc-common/kubernetes/server/server-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: scdf-server
  labels:
    app: scdf-server
    spring-deployment-id: scdf
spec:
  type: ClusterIP
  ports:
    - port: 9393
#      targetPort: 9393
      name: scdf-server
  selector:
    app: scdf-server
