spring-batch-metis-poc-common/kubernetes/server/server-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scdf-server
spec:
  rules:
    - host: scdf-server-192.168.49.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scdf-server
                port:
                  number: 9393
